# Auto-GPT-Plugin-science-graph

./: CITATION.cff  README.md  codemeta.json  pyproject.toml  requirements.txt  setup.py
config/: __init__.py
src/science_graph/: __init__.py  api_factory.py  base_api.py  cli.py  graphql_api.py  rest_api.py  science_graph.py  settings.py  utils.py
tests/: test_api_factory.py  test_base_api.py  test_graphql_api.py  test_rest_api.py  test_science_graph.py
